--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -88,7 +88,7 @@ master:
   runAsUser: 1000
   fsGroup: 1000
   servicePort: 8080
-  targetPort:
+  targetPort: 8081
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
   serviceType: LoadBalancer
