--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -1,16 +1,44 @@
+#apiVersion: extensions/v1beta1
+#kind: Ingress
+#metadata:
+#  annotations:
+#    kubernetes.io/ingress.class: nginx
+#  name: nginx-jenkins
+#  namespace: jenkins
+#spec:
+#  rules:
+#    - host: nukaraju.dev
+#      http:
+#        paths:
+#          - backend:
+#              serviceName: jenkins-ci
+#              servicePort: 8081
+#            path:
+
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
+  name: jenkins-ci
   annotations:
-    kubernetes.io/ingress.class: nginx
-  name: nginx-jenkins
-  namespace: jenkins
+    kubernetes.io/ingress.global-static-ip-name: jenkins-ci-ip
+  labels:
+    app: jenkins-ingress
 spec:
-  rules:
-    - host: nukaraju.dev
-      http:
-        paths:
-          - backend:
-              serviceName: jenkins-ci
-              servicePort: 8081
-            path:
+  backend:
+    serviceName: jenkins-ci
+    servicePort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins-ci-backend
+  labels:
+    app: jenkins-ingress
+spec:
+  type: NodePort
+  selector:
+    app: jenkins-ingress
+    tier: web
+  ports:
+  - port: 8080
+    targetPort: 8080
