--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -150,7 +150,7 @@ master:
   loadBalancerSourceRanges:
   - 0.0.0.0/0
   # Optionally assign a known public LB IP
-  # loadBalancerIP: 1.2.3.4
+  loadBalancerIP: 35.197.117.15
   # Optionally configure a JMX port
   # requires additional javaOpts, ie
   # javaOpts: >
