--- a/jenkins/values.yaml
+++ b/jenkins/values.yaml
@@ -132,10 +132,11 @@ master:
   # Note if you set this to 'LoadBalancer', you *must* define annotations to secure it. By default
   # this will be an external load balancer and allowing inbound 0.0.0.0/0, a HUGE
   # security risk:  https://github.com/kubernetes/charts/issues/1341
+  loadBalancerIP: 35.230.72.55
   slaveListenerServiceType: LoadBalancer
   # Optionally assign an IP to the LoadBalancer slaveListenerService LoadBalancer
   # GKE users: only regional static IPs will work for Service Load balancer.
-  slaveListenerLoadBalancerIP: 35.230.72.55
+#  slaveListenerLoadBalancerIP: 35.230.72.55
   slaveListenerServiceAnnotations: {}
   slaveKubernetesNamespace: jenkins
 
