--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -19,6 +19,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: jenkins-ingress
+  namespace: jenkins
   annotations:
     kubernetes.io/ingress.global-static-ip-name: jenkins-ci-ip
   labels:
@@ -33,6 +34,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-backend
+  namespace: jenkins
   labels:
     app.kubernetes.io/name : jenkins
     app.kubernetes.io/component : jenkins-master
