--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -26,9 +26,12 @@ metadata:
     app.kubernetes.io/name : jenkins
     app.kubernetes.io/component : jenkins-master
 spec:
-  backend:
-    serviceName: jenkins-backend
-    servicePort: 8080
+  - http:
+      paths:
+        - path:
+          backend:
+            serviceName: jenkins-backend
+            servicePort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -42,7 +45,7 @@ spec:
   type: NodePort
   selector:
     app: jenkins-ci
-    tier: service
+    tier: web
   ports:
   - port: 8080
     targetPort: 8081
