--- a/jenkins/ingress/ingress_rules.yaml
+++ b/jenkins/ingress/ingress_rules.yaml
@@ -1,16 +1,48 @@
+#apiVersion: extensions/v1beta1
+#kind: Ingress
+#metadata:
+#  annotations:
+#    kubernetes.io/ingress.class: nginx
+#  name: nginx-jenkins
+#  namespace: jenkins
+#spec:
+#  rules:
+#    - host: nukaraju.dev
+#      http:
+#        paths:
+#          - backend:
+#              serviceName: jenkins-ci
+#              servicePort: 8081
+#            path:
+
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  annotations:
-    kubernetes.io/ingress.class: nginx
-  name: nginx-jenkins
+  name: jenkins-ingress
   namespace: jenkins
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: jenkins-ci-ip
+  labels:
+    app.kubernetes.io/name : jenkins
+    app.kubernetes.io/component : jenkins-master
 spec:
-  rules:
-    - host:
-      http:
-        paths:
-          - backend:
-              serviceName: jenkins-ci
-              servicePort: 8081
-            path:
+  backend:
+    serviceName: jenkins-backend
+    servicePort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins-backend
+  namespace: jenkins
+  labels:
+    app.kubernetes.io/name : jenkins
+    app.kubernetes.io/component : jenkins-master
+spec:
+  type: NodePort
+  selector:
+    app.kubernetes.io/name : jenkins
+    tier: web
+  ports:
+  - port: 8080
+    targetPort: 8081
